# RestLoop

./: .gitignore  .oxlintrc.json  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
scripts/: font.ts  vite-plugin.ts  vite.config.ts
src/: App.scss  App.tsx  main.tsx  style.css  tailwind.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocker.rs  chinese_font.rs  constant.rs  counter.rs  lib.rs  main.rs  message.rs  settings.rs  test.rs  tray.rs  util.rs  window_blocker.rs  window_counter.rs  window_main.rs  x.rs
src/components/: FormItem.tsx  Switch.tsx
src/service/: settings.ts  util.ts
src/store/: settings.ts  theme.ts
