[package]
name = "restloop"
version = "0.1.0"
description = "健康休息提醒器"
authors = ["YuhangGe<abeyuhang@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "restloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [
  "tray-icon",
  "devtools",
  "image-png",
  "unstable",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-store = "2.4.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
winit = "0.30.12"
eframe = { version = "0.33.0" }
display-info = "0.5.7"
tokio = { version = "1.48.0", features = ["macros"] }
tokio-util = { version = "0.7.16" }
